--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  update:
+  update-old:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +19,27 @@ jobs:
         run: |
           git submodule update --init --recursive
           git submodule update --recursive --remote
+      - name: Commit
+        run: |
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions - update submodules"
+          git add --all
+          git commit -m "Update submodules" || echo "No changes to commit"
+          git push
+
+  update-react:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with: 
+          repository: open-contracts/open-contracts.github.io@react
+          token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
+
+      - name: Pull & update submodules recursively
+        run: |
+          git submodule update --init --recursive
+          git submodule foreach --recursive git pull
       - name: Commit
         run: |
           git config user.email "actions@github.com"
