--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Pull & update submodules recursively
         run: |
           git submodule update --init --recursive
-          git submodule foreach --recursive git pull
+          git submodule update --recursive --remote
       - name: Commit
         run: |
           git config user.email "actions@github.com"
