--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         with: 
           repository: open-contracts/old
           token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
+          path: ./public
 
       - name: Pull & update submodules recursively
         run: |
