--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           git commit -m "Update submodules" || echo "No changes to commit"
           git push
 
-  update-react:
+  update-main:
     runs-on: ubuntu-latest
 
     steps:
@@ -39,8 +39,8 @@ jobs:
 
       - name: Pull & update submodules recursively
         run: |
-          git submodule update --init --recursive
-          git submodule update --recursive --remote
+          git pull --recurse-submodules
+          git submodule update --remote --recursive
       - name: Commit
         run: |
           git config user.email "actions@github.com"
