--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Pull & update submodules recursively
         run: |
-          cd public/client-protocol
+          cd ./public/client-protocol
           git pull https://github.com/open-contracts/client-protocol
       - name: Commit
         run: |
