--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Pull & update submodules recursively
         run: |
           ls -r
-          cd ./public/client-protocol
+          ls /public
+          cd /public/client-protocol
           git pull https://github.com/open-contracts/client-protocol
       - name: Commit
         run: |
