--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,8 @@ jobs:
 
       - name: Pull & update submodules recursively
         run: |
-          cd public
-          git submodule update --init --recursive
-          git submodule update --recursive --remote
+          gut submodule sync --recursive
+          git submodule foreach git pull
       - name: Commit
         run: |
           git config user.email "actions@github.com"
