--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Pull & update submodules recursively
         run: |
-          git submodule foreach git pull
+          git submodule update --init --recursive
+          git submodule update --recursive --remote
       - name: Commit
         run: |
           git config user.email "actions@github.com"
