--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,11 @@
-name: Send submodule updates to parent repo
-
-on:
-  push:
-    branches: 
-      - main
+on: [push]
 
 jobs:
-  update-old:
+  build:
+    name: Build and push
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-        with: 
-          repository: open-contracts/old
-          token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
-
-      - name: Pull & update submodules recursively
-        run: |
-          git submodule update --init --recursive
-          git submodule update --recursive --remote
-      - name: Commit
-        run: |
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions - update submodules"
-          git add --all
-          git commit -m "Update submodules" || echo "No changes to commit"
-          git push
-
-  update-main:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-        with: 
-          repository: open-contracts/open-contracts.github.io
-          token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
-
-      - name: Pull & update submodules recursively
-        run: |
-          git submodule update --init --recursive
-          git submodule update --recursive --remote
-      - name: Commit
-        run: |
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions - update submodules"
-          git add --all
-          git commit -m "Update submodules" || echo "No changes to commit"
-          git push
+    - uses: actions/checkout@v2
+    - name: Running build_and_push.sh script
+      run: |
+        sh build_and_push.sh
